# retro-snaker

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
android/app/: build.gradle
src/: main.rs
ui/: app.css  app.tsx  main.ts  simple-game-renderer.ts  snaker-game.ts
